Bug 1153322 - Implement Document.scrollingElement, r=bz